@@ -170,7 +170,13 @@ static void Specify(const char *what, SEXP value)
 	rgl_setPosition(REAL(x));
 	success = 1;
     }
-    
+    else if (streql(what, "windowRect")) {
+        lengthCheck(what, value, 4);
+        x = coerceVector(value, INTSXP);
+        
+        rgl_setWindowRect(&success, INTEGER(x));
+        success = 1;
+    }    
      else warning(_("parameter \"%s\" cannot be set"), what);
  
     if (!success) par_error(what);
@@ -248,6 +254,11 @@ static SEXP Query(const char *what)
     else if (streql(what, ".position")) {
       value = allocVector(REALSXP, 2);
       rgl_getPosition(REAL(value));
+      success = 1;
+    }
+    else if (streql(what, "windowRect")) {
+      value = allocVector(INTSXP, 4);
+      rgl_getWindowRect(&success, INTEGER(value));
       success = 1;
     }
     else
